--- a/ooiui/static/css/custom/banner.css
+++ b/ooiui/static/css/custom/banner.css
@@ -11,7 +11,7 @@
   width: 100%;
   position: fixed;
   height: auto;
-  z-index: 1002;
+  z-index: 100;
 	background-color: #FFF;
 }
 
