--- a/ooiui/static/css/custom/navbar.css
+++ b/ooiui/static/css/custom/navbar.css
@@ -4,7 +4,7 @@
 .navbar-fixed-top {
   top: 113px;
   border-width: 0 0 1px;
-  z-index: 1001;
+  z-index: 100;
   /*
    *   position: inherit;
   padding-right: 30px;
@@ -14,7 +14,7 @@
 
 .navbar-top-links-new li {
   display: inline-block;
-  z-index: 1500;
+  /* z-index: 1500; */
 }
 
 .navbar-top-links-new li:last-child {
@@ -89,7 +89,7 @@
 .navbar-top-links-new .dropdown-user {
   right: 0;
   left: auto;
-  z-index: 1001;
+  /* z-index: 1001; */
 }
 
 .nav > li > a {
